--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SupriyaChanda.github.io/profile/",
+  "homepage": "https://supriyachanda.github.io/profile/",
   "name": "profile",
   "version": "0.1.0",
   "private": true,
